# GNU-Linux

./: README.md
01_TerminalProject/: Makefile  Show  Show.c
02_Multifile/: Makefile
03_Text/: ascii_art.txt  randomize.sh  randomize_.sh
04_Debugging/: Makefile  benchmark_2.txt  range.c  script1.gdb  script2.gdb
05_Regexps/: Makefile  esub.c
06_TracingFencing/: Makefile  move.c  protectfile.c
07_Environmental/: Makefile.am  configure.ac  ex.txt  rhasher.c  rhasher_test.sh
08_I18n/: README.md  configure.ac
08_I18n/po/: POTFILES.in  number_guesser.pot  ru.po
08_I18n/po/ru/: number_guesser.po
08_I18n/src/: Makefile.am  number_guesser.c
09_PatchDiff/: 0001_Size_indication.patch  0002_PathAndWallSymbols_and_Size_indication.patch  0003_RandomSeed_PathAndWallSymbols_and_Size_indication.patch  Makefile  labirint.c
